List View Added

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,56 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/menu">
 
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/overview"
             android:icon="@drawable/ic_menu_camera"
             android:title="Overview" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/grades"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Grades" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/notifications"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Notifications" />
     </group>
 
     <item android:title="My Courses">
         <menu>
-            <item
-                android:id="@+id/nav_share11"
-                android:icon="@drawable/ic_menu_share"
-                android:title="course1" />
-            <item
-                android:id="@+id/nav_send2"
-                android:icon="@drawable/ic_menu_send"
-                android:title="course2" />
-            <item
-                android:id="@+id/nav_share3"
-                android:icon="@drawable/ic_menu_share"
-                android:title="course1" />
-            <item
-                android:id="@+id/nav_send4"
-                android:icon="@drawable/ic_menu_send"
-                android:title="course2" />
-            <item
-                android:id="@+id/nav_share5"
-                android:icon="@drawable/ic_menu_share"
-                android:title="course1" />
-            <item
-                android:id="@+id/nav_send6"
-                android:icon="@drawable/ic_menu_send"
-                android:title="course2" />
+            <group android:checkableBehavior="single">
+
+            </group>
         </menu>
     </item>
-    <group>
-    <menu>
-    <item
-        android:id="@+id/nav_sen3"
-        android:icon="@drawable/ic_menu_send"
-        android:title="logout" />
-</menu></group>
+
+    <item android:title="Exit">
+        <menu>
+            <item
+                android:id="@+id/logout"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Logout">
+            </item>
+        </menu>
+    </item>
+
+
 </menu>
