--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,18 +39,14 @@
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="150dp"
-                android:layout_marginLeft="100dp"
                 android:layout_height="40dp"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold"
                 android:background="@drawable/ss_b"
                 android:textColor="#000000"
+                android:layout_marginTop="27dp"
                 android:layout_below="@+id/password"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="28dp"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_alignParentBottom="false" />
+                android:layout_centerHorizontal="true" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/email"
@@ -58,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="200dp"
                 android:textColor="#000000"
-                android:textColorHint="#000000">
+                android:textColorHint="#000000"
+                >
 
                 <EditText
                     android:id="@+id/emailf"
@@ -72,7 +69,7 @@
                     android:layout_alignParentStart="true"
                     android:textColor="#000000"
                     android:background="@drawable/ss"
-                    android:drawableLeft="@drawable/finaluser"
+                    android:drawableStart="@drawable/finaluser"
 
                     />
 
