--- a/app/src/main/res/layout/activity_threads.xml
+++ b/app/src/main/res/layout/activity_threads.xml
@@ -3,29 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.cyberthieves.trialapp.Threads">
 
-
-    tools:context="com.cyberthieves.trialapp.Threads"
-    android:background="@drawable/side_nav_bar"
-
-
-    >
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:visibility="visible" />
-
-    </android.support.design.widget.AppBarLayout>
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="40dp"
@@ -34,8 +15,8 @@
         android:hint="  Title"
         android:layout_above="@+id/editText2"
         android:layout_alignParentStart="true"
-
-
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
 
@@ -61,6 +42,7 @@
         android:background="@drawable/back"
         android:hint="  Description"
         android:gravity="top"
+        android:padding="10dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -74,7 +56,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="bottom"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="30dp"
         app:backgroundTint="#00cc00"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
