--- a/app/src/main/res/layout/fragment_resources.xml
+++ b/app/src/main/res/layout/fragment_resources.xml
@@ -7,9 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cyberthieves.trialapp.UploadResource"
-    android:background="@drawable/side_nav_bar">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabBrowse"
@@ -17,6 +15,7 @@
         android:layout_height="100dp"
         android:layout_gravity="bottom"
         app:backgroundTint="#0047b3"
+        android:src="@android:drawable/ic_input_add"
         android:layout_marginTop="85dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -28,6 +27,7 @@
         android:layout_height="100dp"
         android:layout_gravity="bottom"
         app:backgroundTint="#00cc00"
+        android:src="@android:drawable/ic_menu_send"
         android:layout_marginBottom="43dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
@@ -35,7 +35,7 @@
     <EditText
         android:layout_width="250dp"
         android:layout_height="30dp"
-        android:text="  No file Chossen"
+        android:text="  No file Chosen"
         android:id="@+id/editText3"
         android:background="@drawable/back"
 
