--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,24 +1,28 @@
-<LinearLayoutz xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="6dip"
+    android:padding="6dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/back"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/serialno"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="0.1"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_marginEnd="1dp"/>
     <TextView
         android:id="@+id/notification"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="0.7"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        />
     <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="0.3"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        />
 
-</LinearLayoutz>
+</LinearLayout>
