--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,18 +35,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:visibility="gone" />
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold"
-                android:background="@drawable/ss_b"
-                android:textColor="#000000"
-                android:layout_marginTop="27dp"
-                android:layout_below="@+id/password"
-                android:layout_centerHorizontal="true" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/email"
@@ -106,18 +94,6 @@
             </android.support.design.widget.TextInputLayout>
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/forgotPass"
-                android:id="@+id/forgPass"
-                android:layout_below="@+id/email_sign_in_button"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="6dp"
-                android:textColor="#000000"
-                />
-
             <ImageView
                 android:layout_width="220dp"
                 android:layout_height="100dp"
@@ -127,11 +103,42 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp" />
 
+            <Button
+                android:id="@+id/email_sign_in_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:text="@string/action_sign_in"
+                android:textStyle="bold"
+                android:background="@drawable/ss_b"
+                android:textColor="#000000"
+                android:layout_below="@+id/imageView2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="250dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/forgotPass"
+                android:id="@+id/forgPass"
+                android:textColor="#000000"
+                android:layout_alignTop="@+id/imageView2"
+                android:layout_alignEnd="@+id/imageView2"
+                android:layout_marginTop="420dp" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Show Password"
+                android:id="@+id/pass_show"
+                android:checked="false"
+                android:layout_below="@+id/password"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp" />
+
         </RelativeLayout>
     </ScrollView>
-
-
-
 
 
 </RelativeLayout>
